# chat2dify

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  config.py  input_variables.py  list_operator.py  main.py  models.py  tasks.py  validator.py
app/agent/: __init__.py  diff.py  editor.py  explainer.py  guard.py  normalizer.py  planner.py
app/compiler/: __init__.py  dify.py
app/dify/: __init__.py  client.py  graph.py  knowledge_retrieval.py  sse.py  version.py
app/static/: app.js  index.html  styles.css
tests/: test_compiler_and_validator.py  test_config_and_version.py  test_conversation_variables.py  test_diff.py  test_dify_client.py  test_dify_graph.py  test_editor.py  test_guard.py  test_main.py  test_planner.py  test_sse.py  test_tasks.py  test_triggers.py
