[project]
name = "chat2dify"
version = "0.1.0"
description = "Generate Dify workflows from natural language through a sidecar service."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

